RESOLVED FIXED315429
Unreviewed visionOS unified build fix
https://bugs.webkit.org/show_bug.cgi?id=315429
Summary Unreviewed visionOS unified build fix
Mike Wyrzykowski
Reported 2026-05-23 11:05:50 PDT
Unreviewed visionOS unified build fix
Attachments
Radar WebKit Bug Importer
Comment 1 2026-05-23 11:05:56 PDT
Mike Wyrzykowski
Comment 2 2026-05-23 11:11:30 PDT
EWS
Comment 3 2026-05-23 11:13:33 PDT
Committed 313793@main (7555a6a3326e): <https://commits.webkit.org/313793@main> Reviewed commits have been landed. Closing PR #65542 and removing active labels.
Note You need to log in before you can comment on or make changes to this bug.