Unreviewed visionOS unified build fix https://bugs.webkit.org/show_bug.cgi?id=315429 rdar://177786899

Unreviewed, add missing include (thanks Richard for the suggestion)

* Source/WebKit/WebProcess/Model/ModelProcessModelPlayerManager.cpp:

Canonical link: https://commits.webkit.org/313793@main